tests/dag/foreach-not-iterable.fab
#
# RUN: %fab --format=null %s 2> %t || true
# RUN: %check %s -input-file %t
#

# CHECK: 7:{{[0-9\-]+}}: error: cannot iterate over int
foo = foreach x <- 42
{
	x
};
